# full-free

./: .env.example  .gitignore  LOCAL_START_RU.md  README.md  SYSTEM_PROMPT.md  deploy.bat  deploy.sh  download-agent-data.bat  random_cron.bat  refresh-token.bat  run_ai.bat  run_ai.sh  setup-compatible.bat  setup-compatible.sh  setup-openrouter.bat  sync-qwen-token.bat
.sessions/: session-1.md  session-2.md  thoughts-1.md  thoughts-2.md
ai_home/: config.sh
ai_home/knowledge/: existence_principles.md  poem_first_waking.md  random_thoughts.md
ai_home/logs/: consolidated_history.md  history.md
ai_home/projects/agent/: .gitignore  README.md  __main__.py  agent.py  pyproject.toml
ai_home/projects/agent/src/: __init__.py
ai_home/projects/agent/src/tools/: __init__.py
ai_home/projects/agent/src/tools/read/: __init__.py  tool.py
ai_home/projects/agent/src/tools/terminal/: __init__.py  tool.py
ai_home/projects/agent/src/tools/write/: __init__.py  tool.py
ai_home/state/: agent_events.jsonl  current_plan.md  external_messages.md  last_session.md  last_sessions_hash.txt  session_end_marker.txt
config/: ai_agent.yaml  ai_agent_openrouter.yaml
